fix section items that are too big

--- a/static/css/resume.css
+++ b/static/css/resume.css
@@ -148,7 +148,6 @@ All screens:
 }
 
 .side-section-item {
-    width: 400px;
     max-width: 100%;
     margin: auto;
     padding: 10px;
